Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-20529

QmlProfiler: Android: Sometimes completely failing to connect to the qml profiler

XMLWordPrintable

    • 27907bc417a093a63413602316ab10dde7e20180

      Steps to reproduce:

      • open/create Qt Quick Application
      • start profiling it on an Android simulator
      • sometimes you'll get a message box stating that it could not connect to the in process qml profiler
        • hitting 'Retry' seems not to help.. (at least tried twice before hitting 'Cancel')

       

      Not sure if related, but the machine I've got is pretty slowly.. When app had been deployed / run / debugged several times I seem to be more lucky when trying to profile and this does not happen..

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ulherman Ulf Hermann
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes